# devops-study-app

./: mise.toml
demo/: tree
scripts/: setup_project
src/backend/: Dockerfile  pyproject.toml
src/backend/src/backend/: __init__.py
src/backend/src/data/: sessions.csv
src/demo/: main.py
src/frontend/: pyproject.toml
